--- a/app/src/main/res/layout/layout_achievement_tab_profile.xml
+++ b/app/src/main/res/layout/layout_achievement_tab_profile.xml
@@ -13,5 +13,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/agUser_profile_list"
         style="@style/item"
-        android:padding="@dimen/pd_normal"/>
+        android:paddingLeft="@dimen/pd_xsmall"
+        android:paddingRight="@dimen/pd_xsmall"/>
 </layout>
