--- a/app/src/main/res/layout/layout_user_status_info.xml
+++ b/app/src/main/res/layout/layout_user_status_info.xml
@@ -17,7 +17,7 @@
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/agUser_fi"
-            style="@style/text.normal.white"
+            style="@style/text.xlarge.white"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
             android:text="@{agUser.getSurnameAndFirstName()}"
