--- a/app/src/main/res/layout/layout_user_tab_profile.xml
+++ b/app/src/main/res/layout/layout_user_tab_profile.xml
@@ -46,6 +46,8 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/agUser_profile_list"
+                android:paddingLeft="@dimen/pd_xsmall"
+                android:paddingRight="@dimen/pd_xsmall"
                 style="@style/item"/>
 
             <RelativeLayout
@@ -54,6 +56,7 @@
 
                 <TextView
                     style="@style/text.normal.black"
+                    android:layout_marginLeft="@dimen/pd_xsmall"
                     android:text="Профиль виден всем"/>
 
                 <android.support.v7.widget.SwitchCompat
