--- a/app/src/main/res/values/base_styles.xml
+++ b/app/src/main/res/values/base_styles.xml
@@ -172,6 +172,11 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="text.xlarge.white">
+        <item name="android:fontFamily" tools:ignore="NewApi">sans-serif-medium</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="text.red">
         <item name="android:textColor">@color/red</item>
     </style>
