--- a/app/src/main/res/layout/fragment_new_flat.xml
+++ b/app/src/main/res/layout/fragment_new_flat.xml
@@ -25,110 +25,9 @@
                     android:id="@+id/layout_flat_residence_toggle"
                     layout="@layout/layout_flat_residence_toggle"/>
 
-                <LinearLayout
-                    android:id="@+id/areaAndDistrictLayout"
-                    style="@style/item.linear"
-                    android:animateLayoutChanges="true"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:id="@+id/districtFlat"
-                        style="@style/flat.inactive"
-                        android:hint="@string/flat_district"/>
-
-                    <TextView
-                        android:id="@+id/areaFlat"
-                        style="@style/flat.inactive"
-                        android:layout_marginTop="@dimen/pd_xsmall"
-                        android:hint="@string/flat_area"/>
-                </LinearLayout>
-
-                <RelativeLayout
-                    style="@style/item">
-
-                    <ProgressBar
-                        android:id="@+id/pbStreet"
-                        style="@style/progressbar"/>
-
-                    <android.widget.AutoCompleteTextView
-                        android:id="@+id/etStreet"
-                        style="@style/flat.auto"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:completionThreshold="3"
-                        android:hint="@string/elk_street"/>
-                </RelativeLayout>
-
-                <LinearLayout
-                    android:id="@+id/street_not_found_container"
-                    style="@style/flat.notfound">
-
-                    <ImageView
-                        style="@style/wrap"
-                        android:paddingRight="@dimen/pd_xsmall"
-                        android:src="@drawable/ag_icon_add_address"/>
-
-                    <LinearLayout
-                        style="@style/item.linear">
-
-                        <TextView
-                            style="@style/text.gray"
-                            android:text="@string/custom_address_not_found_street"/>
-
-                        <TextView
-                            style="@style/text.small.green"
-                            android:text="@string/custom_address_not_found_hint"/>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <RelativeLayout
-                    style="@style/item">
-
-                    <ProgressBar
-                        android:id="@+id/pbBuilding"
-                        style="@style/progressbar"/>
-
-                    <android.widget.AutoCompleteTextView
-                        android:id="@+id/etBuilding"
-                        style="@style/flat.auto"
-                        android:enabled="false"
-                        android:hint="@string/elk_building"
-                        android:nextFocusDown="@+id/etFlat"/>
-                </RelativeLayout>
-
-                <LinearLayout
-                    android:id="@+id/building_not_found_container"
-                    style="@style/flat.notfound">
-
-                    <ImageView
-                        style="@style/wrap"
-                        android:paddingRight="@dimen/pd_xsmall"
-                        android:src="@drawable/ag_icon_add_address"/>
-
-                    <LinearLayout
-                        style="@style/item.linear">
-
-                        <TextView
-                            style="@style/text.gray"
-                            android:text="@string/custom_address_not_found_building"/>
-
-                        <TextView
-                            style="@style/text.small.green"
-                            android:text="@string/custom_address_not_found_hint"/>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/helpLabel"
-                    style="@style/text.gray"
-                    android:paddingTop="@dimen/pd_xsmall"
-                    android:text="@string/ag_add_flat"
-                    android:visibility="gone"/>
+                <include
+                    android:id="@+id/layout_add_flat"
+                    layout="@layout/layout_add_flat"/>
 
                 <include
                     android:id="@+id/layout_flat_warning_block"
