--- a/app/src/main/res/layout/fragment_wizard_profile.xml
+++ b/app/src/main/res/layout/fragment_wizard_profile.xml
@@ -51,11 +51,8 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/wizard_tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabIndicatorColor="@color/yellow"
-            app:tabBackground="@drawable/wizard_profile_dot_selector"
-            app:tabGravity="center"
-            app:tabIndicatorHeight="7dp"/>
+            app:tabIndicatorHeight="0dp"
+            android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/wizard_action"
