--- a/app/src/main/res/layout/fragment_new_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_new_edit_profile.xml
@@ -53,19 +53,21 @@
                         style="@style/edit_profile"
                         android:hint="Фамилия Имя Отчество"/>
 
-                    <include layout="@layout/ag_separator"/>
+                    <!--<include layout="@layout/ag_separator"/>-->
 
-                    <android.support.v7.widget.AppCompatTextView
-                        android:id="@+id/edit_birthday_date"
-                        style="@style/edit_profile"
-                        android:clickable="true"
-                        android:hint="Дата рождения"/>
+                    <include layout="@layout/layout_date_gender" android:id="@+id/layout_date_gender"/>
 
-                    <include layout="@layout/ag_separator"/>
+                    <!--<android.support.v7.widget.AppCompatTextView-->
+                        <!--android:id="@+id/edit_birthday_date"-->
+                        <!--style="@style/edit_profile"-->
+                        <!--android:clickable="true"-->
+                        <!--android:hint="Дата рождения"/>-->
 
-                    <android.support.v7.widget.AppCompatSpinner
-                        android:id="@+id/edit_gender"
-                        style="@style/edit_profile"/>
+                    <!--<include layout="@layout/ag_separator"/>-->
+
+                    <!--<android.support.v7.widget.AppCompatSpinner-->
+                        <!--android:id="@+id/edit_gender"-->
+                        <!--style="@style/edit_profile"/>-->
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
