--- a/app/src/main/res/layout/friend_add_item.xml
+++ b/app/src/main/res/layout/friend_add_item.xml
@@ -3,9 +3,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data></data>
+    <data/>
 
     <LinearLayout
+        android:id="@+id/root"
         style="@style/ripple"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
