--- a/app/src/main/res/layout/friend_item.xml
+++ b/app/src/main/res/layout/friend_item.xml
@@ -6,7 +6,7 @@
         <import
             type="ru.mos.polls.friend.ui.FriendGuiUtils"/>
         <variable
-            name="friend"
+            name="viewModel"
             type="ru.mos.polls.rxhttp.rxapi.model.friends.Friend"/>
         <variable
             name="callback"
@@ -20,7 +20,7 @@
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:padding="@dimen/pd_xxsmall"
-        android:onClick="@{(view) -> callback.onClick(friend)}">
+        android:onClick="@{(view) -> callback.onClick(viewModel)}">
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/avatar"
             android:layout_width="@dimen/vs_xxsmall"
@@ -33,13 +33,13 @@
             >
             <TextView
                 style="@style/text.large.black"
-                android:text="@{FriendGuiUtils.getTitle(friend)}"
+                android:text="@{FriendGuiUtils.getTitle(viewModel)}"
                 android:lines="1"
                 android:ellipsize="end"
                 tools:text="Иван Иваноы"/>
             <TextView
                 style="@style/text.gray"
-                android:text="@{friend.status}"
+                android:text="@{viewModel.status}"
                 android:lines="1"
                 android:ellipsize="end"
                 tools:text="активный гражданин"/>
