--- a/app/src/main/res/layout/layout_pgu_auth_header.xml
+++ b/app/src/main/res/layout/layout_pgu_auth_header.xml
@@ -36,12 +36,11 @@
 
                 <TextView
                     android:id="@+id/state"
+                    style="@style/text.center"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
-                    android:drawableLeft="@drawable/abc_ic_cab_done"
                     android:gravity="center"
-                    android:text="@string/pgu_binding_title"
-                    android:textColor="@color/greenText"/>
+                    android:text="@string/state_pgu_disconnected"/>
             </LinearLayout>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
