--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,12 +25,14 @@
     <dimen name="pd_xxxsmall">5dp</dimen>
     <dimen name="pd_xxsmall">8dp</dimen>
     <dimen name="pd_xsmall">12dp</dimen>
+    <dimen name="pd_xnormal">14dp</dimen>
     <dimen name="pd_normal">16dp</dimen>
     <dimen name="pd_xlarge">20dp</dimen>
     <dimen name="pd_xxlarge">24dp</dimen>
     <dimen name="pd_xxxlarge">32dp</dimen>
 
     <!-- text size !-->
+    <dimen name="ts_xsmall">12sp</dimen>
     <dimen name="ts_small">14sp</dimen>
     <dimen name="ts_normal">16sp</dimen>
     <dimen name="ts_large">18sp</dimen>
